🐛 FIX: Vanilla CSS gaps

--- a/src/Content/Row/Row.css
+++ b/src/Content/Row/Row.css
@@ -63,7 +63,8 @@
 		margin-right: 0;
 		margin-left: 0;
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: 0;
 			padding-left: 0;
 		}
@@ -73,7 +74,8 @@
 		margin-right: var(--margin-row-default, -10px);
 		margin-left: var(--margin-row-default, -10px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-default, 10px);
 			padding-left: var(--gutter-col-default, 10px);
 		}
@@ -83,7 +85,8 @@
 		margin-right: var(--margin-row-medium, -30px);
 		margin-left: var(--margin-row-medium, -30px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-medium, 30px);
 			padding-left: var(--gutter-col-medium, 30px);
 		}
@@ -93,7 +96,8 @@
 		margin-right: var(--margin-row-big, -50px);
 		margin-left: var(--margin-row-big, -50px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-big, 50px);
 			padding-left: var(--gutter-col-big, 50px);
 		}
@@ -105,7 +109,8 @@
 		margin-right: 0;
 		margin-left: 0;
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: 0;
 			padding-left: 0;
 		}
@@ -115,7 +120,8 @@
 		margin-right: var(--margin-row-default, -10px);
 		margin-left: var(--margin-row-default, -10px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-default, 10px);
 			padding-left: var(--gutter-col-default, 10px);
 		}
@@ -125,7 +131,8 @@
 		margin-right: var(--margin-row-medium, -30px);
 		margin-left: var(--margin-row-medium, -30px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-medium, 30px);
 			padding-left: var(--gutter-col-medium, 30px);
 		}
@@ -135,7 +142,8 @@
 		margin-right: var(--margin-row-big, -50px);
 		margin-left: var(--margin-row-big, -50px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-big, 50px);
 			padding-left: var(--gutter-col-big, 50px);
 		}
@@ -147,7 +155,8 @@
 		margin-right: 0;
 		margin-left: 0;
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: 0;
 			padding-left: 0;
 		}
@@ -157,7 +166,8 @@
 		margin-right: var(--margin-row-default, -10px);
 		margin-left: var(--margin-row-default, -10px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-default, 10px);
 			padding-left: var(--gutter-col-default, 10px);
 		}
@@ -167,7 +177,8 @@
 		margin-right: var(--margin-row-medium, -30px);
 		margin-left: var(--margin-row-medium, -30px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-medium, 30px);
 			padding-left: var(--gutter-col-medium, 30px);
 		}
@@ -177,7 +188,8 @@
 		margin-right: var(--margin-row-big, -50px);
 		margin-left: var(--margin-row-big, -50px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-big, 50px);
 			padding-left: var(--gutter-col-big, 50px);
 		}
@@ -189,7 +201,8 @@
 		margin-right: 0;
 		margin-left: 0;
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: 0;
 			padding-left: 0;
 		}
@@ -199,7 +212,8 @@
 		margin-right: var(--margin-row-default, -10px);
 		margin-left: var(--margin-row-default, -10px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-default, 10px);
 			padding-left: var(--gutter-col-default, 10px);
 		}
@@ -209,7 +223,8 @@
 		margin-right: var(--margin-row-medium, -30px);
 		margin-left: var(--margin-row-medium, -30px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-medium, 30px);
 			padding-left: var(--gutter-col-medium, 30px);
 		}
@@ -219,7 +234,8 @@
 		margin-right: var(--margin-row-big, -50px);
 		margin-left: var(--margin-row-big, -50px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-big, 50px);
 			padding-left: var(--gutter-col-big, 50px);
 		}
@@ -231,7 +247,8 @@
 		margin-right: 0;
 		margin-left: 0;
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: 0;
 			padding-left: 0;
 		}
@@ -241,7 +258,8 @@
 		margin-right: var(--margin-row-default, -10px);
 		margin-left: var(--margin-row-default, -10px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-default, 10px);
 			padding-left: var(--gutter-col-default, 10px);
 		}
@@ -251,7 +269,8 @@
 		margin-right: var(--margin-row-medium, -30px);
 		margin-left: var(--margin-row-medium, -30px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-medium, 30px);
 			padding-left: var(--gutter-col-medium, 30px);
 		}
@@ -261,7 +280,8 @@
 		margin-right: var(--margin-row-big, -50px);
 		margin-left: var(--margin-row-big, -50px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-big, 50px);
 			padding-left: var(--gutter-col-big, 50px);
 		}
@@ -273,7 +293,8 @@
 		margin-right: 0;
 		margin-left: 0;
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: 0;
 			padding-left: 0;
 		}
@@ -283,7 +304,8 @@
 		margin-right: var(--margin-row-default, -10px);
 		margin-left: var(--margin-row-default, -10px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-default, 10px);
 			padding-left: var(--gutter-col-default, 10px);
 		}
@@ -293,7 +315,8 @@
 		margin-right: var(--margin-row-medium, -30px);
 		margin-left: var(--margin-row-medium, -30px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-medium, 30px);
 			padding-left: var(--gutter-col-medium, 30px);
 		}
@@ -303,7 +326,8 @@
 		margin-right: -var(--margin-row-big, -50px);
 		margin-left: ar(--margin-row-big, -50px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: ar(--gutter-col-big, 50px);
 			padding-left: ar(--gutter-col-big, 50px);
 		}
@@ -315,7 +339,8 @@
 		margin-right: 0;
 		margin-left: 0;
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: 0;
 			padding-left: 0;
 		}
@@ -325,7 +350,8 @@
 		margin-right: var(--margin-row-default, -10px);
 		margin-left: var(--margin-row-default, -10px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-default, 10px);
 			padding-left: var(--gutter-col-default, 10px);
 		}
@@ -335,7 +361,8 @@
 		margin-right: var(--margin-row-medium, -30px);
 		margin-left: var(--margin-row-medium, -30px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-medium, 30px);
 			padding-left: var(--gutter-col-medium, 30px);
 		}
@@ -345,7 +372,8 @@
 		margin-right: -5var(--margin-row-big, -50px);
 		margin-left: var(--margin-row-big, -50px);
 
-		& [data-col] {
+		& [data-col],
+		& > * {
 			padding-right: var(--gutter-col-big, 50px);
 			padding-left: var(--gutter-col-big, 50px);
 		}
